# transformer-tricks

./: LICENSE  README.md  flashNorm_example.py  flashNorm_modeling_llama.py  flashNorm_test.py  flash_normalization.ipynb  push_pypi.sh  pyproject.toml  requirements.txt  slimAttn_concept.py  slimAttn_paper.py  transformer_tricks.py
doc/: CONTRIBUTING.md  README.md  flashNorm.md  slimAttn.md
latex/: README.md  approximate.tex  arxiv.sty  clean  flashNorm.tex  precompute.tex  references.bib  remove.tex  run  slim.tex  submit
notebooks/: README.md  flashNorm_example.ipynb  flash_normalization.ipynb  removeWeights_paper.ipynb  slimAttn_concept.ipynb  slimAttn_paper.ipynb  update_packages.ipynb
python/: README.md  flashNorm_example.py  flashNorm_modeling_llama.py  flashNorm_test.py  flashify.py  gen.py  ppl.py  push_pypi.sh  pyproject.toml  requirements.txt  run_all.sh  slimAttn_concept.py  test_flashNorm.py  transformerTricks.py  transformer_tricks.py  tricks.py
tex/: README.md  approximate.tex  arxiv.sty  flash.tex  flashNorm.tex  matShrink.tex  matShrink_NeurIPS.tex  matShrink_Sid.tex  neurips_2025.sty  neurips_2025.tex  neurips_2025_mods.sty  precomp1stLayer.tex  precompute.tex  references.bib  remove.tex  removeWeights.tex  run  slimAttn.tex  submit
util/: .aspell  clean_all  gen_notebooks  gen_pdf  push_pypi  spell_check  tex_all
