# config file for creating the PyPi package. See
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformer-tricks"
# version numbering A.B.C: A is major version, B is minor version, and C is patch
version = "0.3.4"
authors = [
  {name="Open Machine", email="info@openmachine.ai"},
]
description = "A collection of tricks to speed up LLMs, see our transformer-tricks papers on arXiv"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "transformers>=4.52.3",
  "accelerate>=1.7.0",
  "datasets>=3.6.0",
]

[project.urls]
"Homepage" = "https://github.com/OpenMachine-ai/transformer-tricks"
"Bug Tracker" = "https://github.com/OpenMachine-ai/transformer-tricks/issues"

[tool.autopep8]
indent-size = 2
in-place = true
max-line-length = 120
ignore = "E265, E401, E70, E20, E241, E11"
# type 'autopep8 --list-fixes' to see a list of all rules
# for debug, type 'autopep8 --verbose *.py'
