# config file for creating the PyPi package. See
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# TODO: I'm actually not sure if it requires Python 3.6, it might also
# work with older or only with a newer version

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformer-tricks"
# version numbering A.B.C: A is major version, B is minor version, and C is patch
version = "0.1.14"
authors = [
  {name="Open Machine", email="info@openmachine.ai"},
]
description = "A collection of tricks to speed up LLMs, see our transformer-tricks papers on arXiv"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "transformers==4.41.2",
  "datasets==2.19.2",
  "accelerate>=0.9.0",
  "torch>=2.4.1",
  "tqdm>=4.64.1",
]

[project.urls]
"Homepage" = "https://github.com/OpenMachine-ai/transformer-tricks"
"Bug Tracker" = "https://github.com/OpenMachine-ai/transformer-tricks/issues"
